Update Map title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-  <h2>Hospital Locations in Australia</h2>
+  <h2>Hospital Distributions</h2>
   <div id="map-vis"></div>
   <script>
     vegaEmbed('#map-vis', 'js/map_plot.vg.json')
@@ -16,4 +16,5 @@
       .catch(console.error);
   </script>
 </body>
+
 </html>
