Increase title's descriptiveness

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-  <h2>Hospital Distributions</h2>
+  <h2>Hospital Distributions in Australia as of 2025</h2>
   <div id="map-vis"></div>
   <script>
     vegaEmbed('#map-vis', 'js/map_plot.vg.json')
@@ -18,3 +18,4 @@
 </body>
 
 </html>
+
