--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Visualisation 1: Population Density + Hospitals -->
     <div class="vis-container">
-      <h2>1. Population Density and Hospital Locations</h2>
+      <h2>1. Population Density and <span style="color: #e74c3c;">Hospital Locations</span></h2>
       <div class="flex-row">
         <div id="vis1"></div>
         <div> It is evident that the majority of hospitals are 
