--- a/index.html
+++ b/index.html
@@ -36,11 +36,24 @@
       </div>
     </div>
 
-    <!-- Visualisation 2: SEIFA Disadvantage -->
+    <!-- Visualisation 2: Hospital Counts by State -->
     <div class="vis-container">
-      <h2>2. Socioeconomic Disadvantage in Victoria</h2>
+      <h2>2. How does Victoria compare to other states?</h2>
       <div class="flex-row">
         <div id="vis2"></div>
+        <div>This chart compares Australian states and territories by the number of public hospitals per 100,000 residents—a basic indicator of potential healthcare access. <br><br>
+          While densely populated regions like NSW and Victoria have the 
+          highest absolute numbers of hospitals, smaller states (such as Tasmania and South Australia) have more hospitals per capita, improving local access. <br><br>
+          ACT stands out for its uniquely low ratio, largely due to its city-state structure. This perspective highlights regional inequalities in infrastructure, which can have implications for healthcare delivery and resilience.
+      </div>
+      </div>
+    </div>
+
+    <!-- Visualisation 3: SEIFA Disadvantage -->
+    <div class="vis-container">
+      <h2>3. Socioeconomic Disadvantage in Victoria</h2>
+      <div class="flex-row">
+        <div id="vis3"></div>
         <p>
           The distribution of disadvantage varies across Victoria, seen in both metro and rural LGAs.
           Cross-referencing with hospital locations can reveal mismatches between need and access.<br>
@@ -51,11 +64,6 @@
       </div>
     </div>
 
-    <!-- Visualisation 3: Hospital Counts by State -->
-    <div class="vis-container">
-      <h2>3. How does other states compare on average?</h2>
-      <div id="vis3"></div>
-    </div>
 
     <!-- Visualisation 4: SEIFA vs Hospital Density -->
     <!-- <div class="vis-container">
