Small sizing fix of charts

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <div id="vis1"></div>
           <p> 
             It is evident that the majority of hospitals are positioned <br>
-            in or near high-density regions, <strong>supporting health service accessibility<br>
-            in populous urban zones</strong>.<br><br>
+            in or near high-density regions, <strong>supporting health service <br>
+            accessibility in populous urban zones</strong>.<br><br>
             However, the map also reveals <strong>large, low-density areas with few <br>
             or no hospitals</strong>, raising questions about healthcare access for <br>
             rural communities. <br><br>
@@ -56,12 +56,12 @@
             potential healthcare access. <br><br>
 
             While densely populated regions like NSW and Victoria have the <br>
-            highest absolute numbers of hospitals, <strong>smaller states (i.e. Tasmania and <br> 
-            South Australia) have more hospitals per capita</strong>, suggesting strong access. <br><br>
+            highest absolute numbers of hospitals, <strong>smaller states (i.e. <br> 
+            Tasmania and South Australia) have more hospitals per <br>capita</strong>, suggesting strong access. <br><br>
 
             ACT stands out for its uniquely low ratio, largely due to its <br>
-            city-state structure. This perspective highlights regional inequalities <br>
-            in infrastructure, which can have implications for healthcare delivery and resilience.
+            city-state structure. This perspective highlights regional <br>
+            inequalities in infrastructure, which can have implications for <br>healthcare delivery and resilience.
           </p>
         </div>
       </div>
@@ -77,12 +77,12 @@
             <!-- LGA search dropdown directly beside the map -->
             <div class="flex-column">
               <p>
-                The distribution of disadvantage varies across Victoria, seen in both <br>
-                metro and rural LGAs. Cross-referencing with hospital locations can reveal <br>
-                mismatches between need and access.<br>
+                The distribution of disadvantage varies across Victoria, seen <br>
+                in both metro and rural LGAs. Cross-referencing with hospital locations can reveal
+                mismatches between need and <br> access.<br><br>
                 <strong>Are the most disadvantaged areas those with least hospital proximity?<br></strong><br>
-                Click on decile values to explore regions by socioeconomic score.<br>
-                Score 1 means most disadvantaged, score 10 means least disadvantaged.<br>
+                Click on decile values to explore regions by socioeconomic <br>score.
+                Score 1 means most disadvantaged, score 10 means <br> least disadvantaged.
               </p>
               <div class ="interactive-box flex-column">
                 <p class="filter-narration">Discover your local area’s socioeconomic standing.</p>
@@ -106,16 +106,17 @@
           <div id="vis4"></div>
           <div class="interactive-box">
             <p><strong>How to Read This Chart</strong></p>
-            <p>The following plot displays ambulance response times for Victorian <br>
-              LGAs by SEIFA decile. Each box shows the range, spread, and median <br> 
-              of response times within a decile. Comparing boxes across deciles <br> 
-              highlights differences between disadvantaged and advantaged areas.
+            <p>The following plot displays ambulance response times for <br>
+              Victorian LGAs by SEIFA decile. Each box shows the range, <br> 
+              spread, and median of response times within a decile. <br>
+              Comparing boxes across deciles highlights differences  <br> 
+              between disadvantaged and advantaged areas.
             </p>
           </div>
         </div>
-        <div class="flex-column">
-          <p>This chart explores how socioeconomic disadvantage correlates with ambulance <br> 
-            response times across Victoria. <br><br>
+        <div class="flex-column-center">
+          <p>This chart explores how socioeconomic disadvantage correlates <br> 
+            with ambulance response times across Victoria. <br><br>
 
             A clear pattern emerges — <strong>response times tend to be longer <br>
               in more disadvantaged regions</strong>, with greater variability as well. <br>
@@ -124,10 +125,10 @@
               resource constraints, or distance from urban centers.<br><br>
 
             By contrast, <strong>wealthier and more urban LGAs (higher deciles)</strong> <br>
-            generally report faster and more consistent response times, highlighting <br>
-            disparities in emergency care accessibility. These findings reinforce the broader <br>
-            theme of <strong>unequal healthcare access</strong> and underscore the importance of <br>
-            equitable resource distribution across Victoria’s regions.
+            generally report faster and more consistent response times, <br>
+            highlighting disparities in emergency care accessibility. These <br>findings reinforce the broader theme of <strong>unequal healthcare <br>
+            access</strong> and underscore the importance of equitable resource<br>
+            distribution across Victoria’s regions.
           </p>
 
           <img src="./images/ambulance.png" alt="Ambulance" style="max-width: 30%; height: auto; display: block; margin-top: 20px;">
@@ -144,16 +145,17 @@
           <div class="interactive-box">
             <p><strong>How to Read This Chart</strong></p>
             <p>
-            This scatter plot summarises hospital density (hospitals/square kilometre) <br>
-            for Victorian LGAs grouped by SEIFA decile. Each point summarises <br>
-            hospital density within a specific socioeconomic decile. The y-axis <br>
-            represents relative advantage (higher decile = more advantage), and the <br>
-            x-axis shows hospital density. Comparing these helps identify patterns or <br>
+            This scatter plot summarises hospital density (hospitals/square <br>
+            kilometre) for Victorian LGAs grouped by SEIFA decile. Each <br>
+            point summarises hospital density within a specific <br> 
+            socioeconomic decile. The y-axis represents relative advantage <br> 
+            (higher decile = more advantage), and the x-axis shows<br>
+            hospital density. Comparing these helps identify patterns or <br>
             differences in hospital accessibility across socioeconomic groups.
             </p>
           </div>
         </div>
-        <div class="flex-column">
+        <div class="flex-column-center">
           <p>
             <strong>How Strongly Does Disadvantage Affect Hospital Accessibility?</strong><br>
             The plot shows that higher SEIFA decile areas do not <br>
@@ -163,8 +165,8 @@
             hospital density: decile 2 LGAs consistently have very low hospital <br>
             density (below 0.05), while deciles 7 and above show some LGAs <br>
             with substantially higher densities. <br><br>
-            Thus, though the relationship between geographic advantage and hospital <br>
-            access may be inconsistent, geographic factors remain an important influence.
+            Thus, though the relationship between geographic advantage and <br>
+            hospital access may be inconsistent, geographic factors remain an important influence.
           </p>
 
           <img src="./images/hospital.png" alt="Hospital" style="max-width: 50%; height: auto; display: block; margin-top: 20px;">
@@ -177,7 +179,7 @@
         Data sources: <a href=https://myhospitalsapi.aihw.gov.au/index.html>AIHW MyHospitals API</a>, ABS Census 
         <a href="https://www.abs.gov.au/statistics/people/population/regional-population/2023-24#data-downloads">Population</a> & 
         <a href="https://www.abs.gov.au/statistics/people/people-and-communities/socio-economic-indexes-areas-seifa-australia/latest-release#data-downloads">SEIFA</a> Data, 
-        <a href="https://vahi.vic.gov.au/ambulance-services/high-priority-time-critical-incidents-priority-code-1">Victorian Health Services (VAHI)</a>. <br>
+        <a href="https://vahi.vic.gov.au/ambulance-services/high-priority-time-critical-incidents-priority-code-1"></a>Victorian Health Services (VAHI). <br>
         Visualisation built with Vega-Lite.</p>
     </footer>
   </div>
